--- a/MachineLearning.html
+++ b/MachineLearning.html
@@ -88,8 +88,8 @@ data_testing&lt;-read.table(fileName_testing,header = TRUE,sep = &quot;,&quot;,n
 
 tbl_training&lt;-tbl_df(data_training);tbl_testing&lt;-tbl_df(data_testing)</code></pre>
 </div>
-<div id="data-preproceing" class="section level1">
-<h1>Data Preproceing</h1>
+<div id="data-preprocessing" class="section level1">
+<h1>Data Preprocessing</h1>
 <ol start="2" style="list-style-type: decimal">
 <li>We noticed that many variables did not contain any measurements in both training and testing dataset. These variables (columns) were removed.</li>
 <li>We aslo removed first seven columns which have only discriptive information in both sets.</li>
@@ -197,8 +197,8 @@ cnf_test</code></pre>
 ## Detection Prevalence   0.2843   0.1935   0.1744   0.1639   0.1839
 ## Balanced Accuracy      1.0000   1.0000   1.0000   1.0000   1.0000</code></pre>
 </div>
-<div id="run-test-for-write-results" class="section level1">
-<h1>Run test for Write Results</h1>
+<div id="analysis-of-testing-dataset" class="section level1">
+<h1>Analysis of testing dataset</h1>
 <p>Finally, we used built model for predition using data loaded from testing file. Submitted results gave all correct answers.</p>
 <pre class="r"><code>prdctTrueTest&lt;- predict(modelFit,testPC,predict.all=TRUE)
 
